Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130458

Fusion theme doesn't use accent color in Windows light mode

XMLWordPrintable

    • Windows
    • a55db2cbe (dev), b1979646f (6.9), d5f4da356 (6.8)

      When creating a Windows application using the Fusion theme, the Windows accent color is not used for highlighted text and menu items when Windows is set to light mode. On changing to dark mode the accent color shows up as expected.

      The reason for the difference is that in qwindowstheme.cpp, the dark base system palette derives the highlight color from the C++/WinRT accent color (which uses the system accent color), while the light palette derives it from the winuser.h GetSysColor function (which on my system always returns blue). I checked the git logs and PR comments and couldn't find a reason for the difference.

        For Gerrit Dashboard: QTBUG-130458
        # Subject Branch Project Status CR V

            owolff Oliver Wolff
            robxnano Rob Hall
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes